--- a/src/components/about.css
+++ b/src/components/about.css
@@ -4,7 +4,7 @@
 
 .react-calendar__navigation {
   height: 75px;
-  background-color: cadetblue;
+  background-color: steelblue;
 }
 
 .react-calendar__navigation button {
@@ -13,19 +13,38 @@
   color: #fafafa;
 }
 
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+  background-color: cadetblue;
+}
+
 button.react-calendar__navigation__label {
   font-size: 18px;
 }
 
 .react-calendar__month-view__weekdays {
   font-size: 0.9em;
+  border-bottom: 1px solid #666;
 }
 
-.react-calendar__tile {
+button.react-calendar__tile {
   text-align: left;
   position: relative;
   height: 150px;
   max-height: 175px;
+
+  border-right: 1px solid #666;
+  border-bottom: 1px solid #666;
+}
+
+/* Adjust the borders of marginal tiles */
+
+button.react-calendar__tile:nth-of-type(7n) {
+  border-right: 0;
+}
+
+button.react-calendar__tile:nth-of-type(n+29):nth-last-child(n+1) {
+  border-bottom: 0;
 }
 
 .react-calendar__tile abbr {
