--- a/src/components/about.css
+++ b/src/components/about.css
@@ -60,14 +60,17 @@ button.react-calendar__tile:nth-of-type(n+29):nth-last-child(n+1) {
   color: rgb(116, 114, 114);
 }
 
-.react-calendar__tile button.addReminder__button {
+.react-calendar__tile .addReminder__button {
   position: absolute;
   bottom: 5px;
   right: 5px;
   font-weight: bold;
   line-height: 1em;
+  padding: 7px 10px 8px 10px;
   width: 30px;
   height: 30px;
+  background-color: #fafafa;
+  color: #666;
   border: 1px solid #999;
   border-radius: 15px;
 }
